crates/tm-lang/tests/fixtures/tm-conformance-v2/reject/02_assignment.tm
-- expect: TM2004
x = 1
